ingress-and-services/ingress-and-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app: myapp
spec:
  type: NodePort # ClusterIP, LoadBalancer, ExternalName
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30008
  selector: # This links the service to the pod with the correct labels
    app: myapp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    # Annotazione comune e spesso necessaria per NGINX Ingress Controller
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "myapp.mydomain.com" # Il dominio pubblico
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-service # 1. Invia il traffico a questo Service...
                port:
                  number: 80 # 2. ...sulla sua porta 80.
